[package]
name = "rorbind"
version = "0.0.1"
authors = [ "Edmund Wu" ]
edition = "2018"
description = "Read-Only Recursive Bind Mounts"

[[bin]]
name = "rorbind"
path = "Mount.rs"

[lib]
name = "rorbind"
path = "RORBind.rs"
crate-type = [ "rlib", "staticlib" ]

[dependencies]
libc = "0.2"
cbindgen = "0.19"
structopt = "0.3"
